src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Latin America</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Legal Case Support Process</fullName>
        <description>Legal Case Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Rep Help Desk</fullName>
        <description>Process used by for Daikin Rep Help Desk Requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending User</fullName>
        </values>
        <values>
            <fullName>Pending Vendor</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SLP Rapid Response</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Help</fullName>
        <description>Process used by for Daikin Salesforce Help Requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Operations</fullName>
        <description>Service Operations for North America</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Sales Case Support Process</fullName>
        <description>Created for Service Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TRC - North America</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
        <values>
            <fullName>Working-Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Warranty</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved%3A Waiting</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Denied%3A Awaiting Customer Response</fullName>
        </values>
        <values>
            <fullName>In Dispute</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>RGM Processed</fullName>
        </values>
        <values>
            <fullName>Submitted for Approval</fullName>
        </values>
        <values>
            <fullName>Warranty Approved</fullName>
        </values>
        <values>
            <fullName>Warranty Rejected%2FDenied</fullName>
        </values>
        <values>
            <fullName>Warranty Review</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AP_Number__c</fullName>
        <description>The number from Oracle that was paid out as Warranty reimbursement (i.e. credit memo or check). This is populated from the Oracle Integration.  In order for the Oracle integration to work the Status has to be “Warranty Approved” or “Approved: Waiting”.</description>
        <inlineHelpText>The number from Oracle that was paid out as reimbursement (i.e. credit memo or check). Oracle description must include &quot;WC #&quot;.</inlineHelpText>
        <label>A/P Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_Paid_Date__c</fullName>
        <description>The A/P Paid Date from Oracle for when it was paid out as reimbursement (i.e. credit memo or check). This is populated from the Oracle Integration.  In order for the Oracle integration to work the Status has to be “Warranty Approved” or “Approved: Waiting”.</description>
        <inlineHelpText>The A/P Paid Date from Oracle for when it was paid out as reimbursement (i.e. credit memo or check)</inlineHelpText>
        <label>A/P Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AP__c</fullName>
        <description>Approved amount that was paid out to the customer for Warranty cases.  This is populated from the Oracle Integration.  In order for the Oracle integration to work the Status has to be “Warranty Approved” or “Approved: Waiting”.</description>
        <inlineHelpText>Amount paid to the customer</inlineHelpText>
        <label>A/P Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Bill_To_Address__c</fullName>
        <formula>IF(LEN(Account.Primary_Billing_Address__r.Address_Line_1__c)&gt;0, Account.Primary_Billing_Address__r.Address_Line_1__c &amp; BR() , &quot;&quot; )&amp;
IF(LEN(Account.Primary_Billing_Address__r.Address_Line_2__c)&gt;0, Account.Primary_Billing_Address__r.Address_Line_2__c &amp; BR() , &quot;&quot; )&amp;
IF(LEN(Account.Primary_Billing_Address__r.Address_Line_3__c)&gt;0, Account.Primary_Billing_Address__r.Address_Line_3__c&amp; BR() , &quot;&quot; )&amp;
IF(LEN(Account.Primary_Billing_Address__r.City__c)&gt;0, Account.Primary_Billing_Address__r.City__c &amp;&quot;, &quot;,&quot;&quot;) &amp;
IF(LEN(Account.Primary_Billing_Address__r.State_Province_ISO_Code__c)&gt;0, Account.Primary_Billing_Address__r.State_Province_ISO_Code__c &amp; &quot; &quot;,&quot;&quot;)&amp;
IF(LEN( Account.Primary_Billing_Address__r.Postal_Code__c) &gt;0, Account.Primary_Billing_Address__r.Postal_Code__c,&quot;&quot;)</formula>
        <inlineHelpText>Accounts Bill To Address</inlineHelpText>
        <label>Account Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_to_Credit__c</fullName>
        <description>Warranty</description>
        <inlineHelpText>Account number that is used for credit during vendor recovery.</inlineHelpText>
        <label>Acct# to Credit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Warranty_End_Date__c</fullName>
        <formula>Asset.Actual_Warranty_End_Date__c</formula>
        <inlineHelpText>Primary Asset Actual Warranty End Date</inlineHelpText>
        <label>Actual Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Warranty_Start_Date__c</fullName>
        <formula>Asset.Actual_Warranty_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date Warrant effectively begins. It is maintained on the Asset.</inlineHelpText>
        <label>Actual Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Materials_Amount_Approved__c</fullName>
        <inlineHelpText>What Additional Materials Dollar Amounts were approved?</inlineHelpText>
        <label>Additional Materials Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Materials_Amount_Requested__c</fullName>
        <inlineHelpText>What Additional Materials Dollar Amounts were requested?</inlineHelpText>
        <label>Additional Materials Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Affected_Program__c</fullName>
        <description>These are the programs or sites that Reps or Employees calling the Rep Help Desk might reference.</description>
        <inlineHelpText>Choose one or more programs or sites.</inlineHelpText>
        <label>Affected Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Daikin Tools</fullName>
                </value>
                <value>
                    <fullName>DST AC Compressor Chiller</fullName>
                </value>
                <value>
                    <fullName>DST Blower Coil</fullName>
                </value>
                <value>
                    <fullName>DST CCC</fullName>
                </value>
                <value>
                    <fullName>DST Centrifugal Chiller</fullName>
                </value>
                <value>
                    <fullName>DST Coils</fullName>
                </value>
                <value>
                    <fullName>DST Condensing Units (RCS)</fullName>
                </value>
                <value>
                    <fullName>DST Daikin Controls</fullName>
                </value>
                <value>
                    <fullName>DST Destiny</fullName>
                </value>
                <value>
                    <fullName>DST Enfinity WSHP</fullName>
                </value>
                <value>
                    <fullName>DST Fan Coil</fullName>
                </value>
                <value>
                    <fullName>DST Fan Coil Hi Line</fullName>
                </value>
                <value>
                    <fullName>DST Fan Coil Large Cap</fullName>
                </value>
                <value>
                    <fullName>DST Hub</fullName>
                </value>
                <value>
                    <fullName>DST MIS</fullName>
                </value>
                <value>
                    <fullName>DST MPS</fullName>
                </value>
                <value>
                    <fullName>DST Pathfinder (AWS)</fullName>
                </value>
                <value>
                    <fullName>DST PDC Chiller</fullName>
                </value>
                <value>
                    <fullName>DST RAH</fullName>
                </value>
                <value>
                    <fullName>DST Rebel (DPS)</fullName>
                </value>
                <value>
                    <fullName>DST RPS</fullName>
                </value>
                <value>
                    <fullName>DST Self Contained</fullName>
                </value>
                <value>
                    <fullName>DST Self Contained SWT</fullName>
                </value>
                <value>
                    <fullName>DST SmartSource WSHP (2 tier)</fullName>
                </value>
                <value>
                    <fullName>DST Unit Vent</fullName>
                </value>
                <value>
                    <fullName>DST Valve Packages</fullName>
                </value>
                <value>
                    <fullName>DST VAV</fullName>
                </value>
                <value>
                    <fullName>DST Vertical Stack WSHP</fullName>
                </value>
                <value>
                    <fullName>DST Vision/Skyline</fullName>
                </value>
                <value>
                    <fullName>DST WC Compressor Chiller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount that has been approved for Warranty claims. Compare with Amount Requested</description>
        <inlineHelpText>The approved reimbursement amount for product under Warranty</inlineHelpText>
        <label>Amount Approved</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Notes__c</fullName>
        <description>Approval notes intended for managers and above</description>
        <inlineHelpText>Approval notes/information that can be included in templates to others.</inlineHelpText>
        <label>Approval Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <defaultValue>&quot;Not Submitted&quot;</defaultValue>
        <description>Captures Warranty Approval status updated during approvals. Status can be leveraged in the future for additional Daikin groups</description>
        <inlineHelpText>Status of case approval</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Warranty Approved</fullName>
                </value>
                <value>
                    <fullName>Warranty Rejected</fullName>
                    <label>Warranty Rejected/Denied</label>
                </value>
                <value>
                    <fullName>PGM/RGM Approved</fullName>
                </value>
                <value>
                    <fullName>PGM/RGM Rejected</fullName>
                </value>
                <value>
                    <fullName>EVP Approved</fullName>
                </value>
                <value>
                    <fullName>EVP Rejected</fullName>
                </value>
                <value>
                    <fullName>CEO Approved</fullName>
                </value>
                <value>
                    <fullName>CEO Rejected</fullName>
                </value>
                <value>
                    <fullName>Manager Approved</fullName>
                </value>
                <value>
                    <fullName>Admin Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Date__c</fullName>
        <description>Stamped by the approval process</description>
        <inlineHelpText>Warranty Final Authorization Date</inlineHelpText>
        <label>Authorized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backlog_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is used to link case records to backlog items</description>
        <inlineHelpText>The backlog item record created by this case</inlineHelpText>
        <label>Backlog Item</label>
        <referenceTo>alm_pm2__Backlog__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Multi__c</fullName>
        <label>Business Unit - RETIRE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAH</fullName>
                </value>
                <value>
                    <fullName>Applied Air Handler</fullName>
                </value>
                <value>
                    <fullName>Applied Terminal Systems</fullName>
                </value>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>Chiller</fullName>
                </value>
                <value>
                    <fullName>Chillers</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Picklist__c</fullName>
        <description>Captures Business Unit for Warranty approval drivers and processes. Leveraged for the Warranty Header (parent) case</description>
        <inlineHelpText>Value will drive PGM approvers and approval threshold limits.</inlineHelpText>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAH</fullName>
                </value>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>Chillers</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>VAV</fullName>
                </value>
                <value>
                    <fullName>MCP</fullName>
                </value>
                <value>
                    <fullName>Applied Air Handler</fullName>
                    <isActive>false</isActive>
                    <label>Applied Air Handler</label>
                </value>
                <value>
                    <fullName>Applied Terminal Systems</fullName>
                    <isActive>false</isActive>
                    <label>Applied Terminal Systems</label>
                </value>
                <value>
                    <fullName>Chiller</fullName>
                    <isActive>false</isActive>
                    <label>Chiller</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>The Assets DW Business Unit</description>
        <formula>IF(Asset.Product2.DW_Product_Business_Unit__c = &quot;Applied Air Handler&quot;,&apos;AAH&apos;, 
IF(Asset.Product2.DW_Product_Business_Unit__c = &quot;Applied Terminal Systems&quot;, &apos;ATS&apos;,
IF(Asset.Product2.DW_Product_Business_Unit__c = &quot;Chiller&quot;, &apos;Chillers&apos;,
IF(Asset.Product2.DW_Product_Business_Unit__c = &quot;Controls&quot;, &apos;Controls&apos;,
IF(Asset.Product2.DW_Product_Business_Unit__c !=&quot;&quot;, &apos;VAV&apos;,&apos;Unknown&apos;)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Assets DW Business Unit</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>Set up for the SLP Rapid Response team</description>
        <inlineHelpText>The trucking company that was involved with the shipment in question</inlineHelpText>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Sub_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Averritt</fullName>
                </value>
                <value>
                    <fullName>Estes</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>NEMF</fullName>
                </value>
                <value>
                    <fullName>ProTrans</fullName>
                </value>
                <value>
                    <fullName>R&amp;L</fullName>
                </value>
                <value>
                    <fullName>REO Ltl</fullName>
                </value>
                <value>
                    <fullName>REO Truckload</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>XPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <inlineHelpText>Please specify the category for this Case</inlineHelpText>
        <label>Case Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Addresses</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Batch Jobs</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Change of Driver</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Credit Application</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>DST Assistance</fullName>
                </value>
                <value>
                    <fullName>Equipment Issue</fullName>
                </value>
                <value>
                    <fullName>Expedite</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Force.com Sites</fullName>
                </value>
                <value>
                    <fullName>FPA Special Request</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>GEOTAB</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Invoices</fullName>
                </value>
                <value>
                    <fullName>Known Issue (Fix on fail)</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Currency_Text__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Currency Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Details__c</fullName>
        <label>Case Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Plan</label>
        <referenceTo>Case_Plan__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Category_Detail__c</fullName>
        <description>Required fields based on the Case Sub Category</description>
        <inlineHelpText>Required fields based on the Case Sub Category</inlineHelpText>
        <label>Case Sub-Category Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Sub_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alternate Contact Needed/Re-consignments</fullName>
                </value>
                <value>
                    <fullName>Bagging</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Carton &amp; Unit</fullName>
                </value>
                <value>
                    <fullName>Challenge Getting Equipment</fullName>
                </value>
                <value>
                    <fullName>Concealed</fullName>
                </value>
                <value>
                    <fullName>Delays Getting Answers</fullName>
                </value>
                <value>
                    <fullName>Items Lost in House before Shipment</fullName>
                </value>
                <value>
                    <fullName>Items Lost in Transit</fullName>
                </value>
                <value>
                    <fullName>Items Returned</fullName>
                </value>
                <value>
                    <fullName>Late for delivery appointment</fullName>
                </value>
                <value>
                    <fullName>Layover fees</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>No Call Before Delivering</fullName>
                </value>
                <value>
                    <fullName>No PRO#/Wrong PRO# on the Sales Portal</fullName>
                </value>
                <value>
                    <fullName>REO Complaints</fullName>
                    <isActive>false</isActive>
                    <label>REO Complaints</label>
                </value>
                <value>
                    <fullName>Same Day Shipment Requested</fullName>
                </value>
                <value>
                    <fullName>Shipments Not Sent Complete</fullName>
                </value>
                <value>
                    <fullName>Short Shipment by Factory/Warehouse</fullName>
                </value>
                <value>
                    <fullName>Shrink Wrap</fullName>
                </value>
                <value>
                    <fullName>Straps</fullName>
                </value>
                <value>
                    <fullName>Tagging/Product Labeling Issues</fullName>
                </value>
                <value>
                    <fullName>Tarp</fullName>
                </value>
                <value>
                    <fullName>Team Drivers needed</fullName>
                </value>
                <value>
                    <fullName>Tracking on Website Inaccurate</fullName>
                </value>
                <value>
                    <fullName>Transit Time Too Long</fullName>
                </value>
                <value>
                    <fullName>Unable to Reach</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Wrong Item Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Sub_Category__c</fullName>
        <label>Case Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3PL Complaint</fullName>
                </value>
                <value>
                    <fullName>ACH/EFT</fullName>
                </value>
                <value>
                    <fullName>Affidavit</fullName>
                </value>
                <value>
                    <fullName>Asset Lookup</fullName>
                </value>
                <value>
                    <fullName>Bid Package Prep/Signatures</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t find out how to order quick ship</fullName>
                </value>
                <value>
                    <fullName>Cannot Reach Applications</fullName>
                </value>
                <value>
                    <fullName>Cannot Reach TRC</fullName>
                </value>
                <value>
                    <fullName>Cert of Ins.</fullName>
                </value>
                <value>
                    <fullName>Change &quot;Purchaser&quot; to &quot;Daikin as Purchaser&quot;</fullName>
                </value>
                <value>
                    <fullName>Chiller Operating Limitations</fullName>
                </value>
                <value>
                    <fullName>COI - Rep</fullName>
                </value>
                <value>
                    <fullName>COI - Service</fullName>
                </value>
                <value>
                    <fullName>Competitive Analysis</fullName>
                </value>
                <value>
                    <fullName>Complaints on Reservation Process</fullName>
                </value>
                <value>
                    <fullName>Connect for Office</fullName>
                </value>
                <value>
                    <fullName>Contact Lookup</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>Credentialing</fullName>
                </value>
                <value>
                    <fullName>Credentials</fullName>
                </value>
                <value>
                    <fullName>CRN</fullName>
                </value>
                <value>
                    <fullName>Daikin as Purchaser</fullName>
                </value>
                <value>
                    <fullName>DaikinTools/catalogs too hard to use</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Delivered to Wrong Address</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t like change/cancel policy</fullName>
                </value>
                <value>
                    <fullName>Drawing request</fullName>
                </value>
                <value>
                    <fullName>Driver/Vehicle Info</fullName>
                </value>
                <value>
                    <fullName>DST Issue</fullName>
                </value>
                <value>
                    <fullName>DST Training/Help</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim Disputed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>